# Bookex

./: README.md  pyproject.toml
book_agent/: cli.py  git_utils.py  langchain_utils.py
book_agent/prompts/: continuity.md  expand.md  outline.md  style_guide.md
manuscript/: bible.md  outline.md
manuscript/chapters/: ch01.md
